# libical

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .codespellrc  .dir-locals.el  .editorconfig  .emacs-dirvars  .gersemirc  .gitattributes  .gitignore  .krazy  .mdlrc.rb  .perltidyrc  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .travis.yml  3RDPARTY.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  COPYING  COPYING.LESSER.txt  CPPLINT.cfg  ChangeLog  ConfigureChecks.cmake  INSTALL.md  Install.txt  LICENSE.LGPL21.txt  LICENSE.txt  LibIcalConfig.cmake.in  Makefile  Makefile.in  README  README.cmake  README.md  REUSE.toml  (+35 more)
doc/: AddingOrModifyingComponents.txt  CMakeLists.txt  Doxyfile.cmake  Mainpage.dox  Makefile.am  Makefile.in  MigrationGuide_to_4.0.md  README.md  UsingLibical.md  UsingLibical.txt  header.html  rfcs.md
doc/reference/: CMakeLists.txt
docs/: 3RDPARTY.md  CMakeLists.txt  Dependencies.md  Doxyfile.cmake  HOWTO-update-apidocs.md  HOWTO-update-zoneinfo.md  InternalLimits.md  KnownExceptions.md  KnownLimitations.md  MigrationGuide_to_4.0.md  MigrationGuide_to_4.md  SUMMARY.md  UsingLibical.md  doxygen-awesome.css  header.html  rfcs.md
docs/4.0.0/: announcement.md  release.md
docs/4.0.1/: announcement.md  release.md
docs/4.0.2/: announcement.md  release.md
docs/developer/: HOWTO-abi-changes.md  HOWTO-setup-windows.md  HOWTO-update-apidox.md  HOWTO-update-book.md  HOWTO-update-zoneinfo.md  branching.md  prerelease-source.md  release-todo.md
docs/reference/: CMakeLists.txt
examples/: CMakeLists.txt  Makefile.in  access-usecases.txt  access_components.c  access_properties_and_parameters.c  errors.c  main.c  parse_text.c
libical/: .cvsignore  .svnignore  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Install.txt  Makefile.am  Makefile.in  NEWS  README  README.cmake  THANKS  acconfig.h  aclocal.m4  bootstrap  buildpackages  config.h.cmake  config.h.in  configure  configure.in  libical.pc.in  mkinstalldirs
libical/debian/: changelog  control  libical-dev.install  libical0.install  libical0.substvars  rules
libical/design-data/: CMakeLists.txt  Makefile.am  Makefile.in  components.txt  param-c-types.txt  parameters.csv  params-in-prop.txt  prop-to-value.txt  properties.csv  property-tokens.txt  restrictions.csv  value-c-types.txt  value-cpp-types.txt  value-mem-semantics.txt  value-types.csv
libical/doc/: Makefile.in  UsingLibical.lyx  UsingLibical.txt
libical/examples/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  access_properties_and_parameters.c  errors.c  parse_text.c  usecases.c
libical/scripts/: .cvsignore  Makefile.am  Makefile.in  mkderivedparameters.pl  mkderivedproperties.pl  mkderivedvalues.pl  readvaluesfile.pl
libical/src/: CMakeLists.txt  Makefile.am  Makefile.in  ical.def  ical.h  icalss.def  icalvcal.def  libical.dsw
libical/test-data/: 0  1  2445.ics  2446.ics  8  Makefile.in  calendar.ics  classify.ics  incoming.ics  recur-errors.txt  recur.txt
libical/zoneinfo/: CMakeLists.txt  Makefile.in  zones.tab
scripts/: CMakeLists.txt  Makefile.in  buildtests.sh  cmp-abi-data-libical.sh  compileit.bat  compileit.sh  meson.build  mkderivedcomponents.pl  mkderivedparameters.pl  mkderivedproperties.pl  mkderivedvalues.pl  mkrestrictiontable.pl  readvaluesfile.pl  release-libical.sh  run-coverity.sh  set_compiler_env.bat  setup-travis.sh  update-zoneinfo.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  ical.def  ical.h  icalss.def  icalvcal.def  meson.build
src/Net-ICal-Libical/: Makefile.PL  README  netical.i  netical_wrap.c  netical_wrap.doc
src/java/: CMakeLists.txt  ICalDurationType.java  ICalParameter.java  ICalPeriodType.java  ICalProperty.java  ICalRecurrenceType.java  ICalTimeType.java  ICalTriggerType.java  ICalValue.java  VAgenda.java  VAlarm.java  VCalendar.java  VComponent.java  VEvent.java  VFreeBusy.java  VQuery.java  VToDo.java  jlibical_consts_cxx.h  jlibical_consts_cxx.hpp  jlibical_utils_cxx.cpp  jlibical_utils_cxx.h  jlibical_utils_cxx.hpp  jniICalDurationType_cxx.cpp  jniICalDurationType_cxx.h  jniICalDurationType_cxx.hpp  jniICalPeriodType_cxx.cpp  jniICalPeriodType_cxx.h  jniICalPeriodType_cxx.hpp  jniICalRecurrenceType_cxx.cpp  jniICalRecurrenceType_cxx.h  jniICalRecurrenceType_cxx.hpp  jniICalTimeType_cxx.cpp  jniICalTimeType_cxx.h  jniICalTimeType_cxx.hpp  jniICalTriggerType_cxx.cpp  jniICalTriggerType_cxx.h  jniICalTriggerType_cxx.hpp  net_cp_jlibical_ICalParameter_cxx.cpp  net_cp_jlibical_ICalParameter_cxx.h  net_cp_jlibical_ICalParameter_cxx.hpp  (+10 more)
src/libical/: .svnignore  CMakeLists.txt  Makefile.in  astime.h  byref.c  caldate.c  ical_file.cmake  icalarray.c  icalarray.h  icalattach.c  icalattach.h  icalattachimpl.h  icalcomponent.c  icalcomponent.h  icaldate_p.c  icaldate_p.h  icalderivedparameter.c.in  icalderivedparameter.h.in  icalderivedproperty.c.in  icalderivedproperty.h.in  icalderivedvalue.c.in  icalderivedvalue.h.in  icalduration.c  icalduration.h  icalduration_p.c  icalduration_p.h  icalenumarray.c  icalenumarray.h  icalenums.c  icalenums.h  icalerror.c  icalerror.h  icalerror.h.cmake  icalerror.h.in  icalerror_p.c  icalerror_p.h  icallangbind.c  icallangbind.h  icallangbind_p.c  icallangbind_p.h  (+72 more)
src/libical-glib/: CMakeLists.txt  ICalGLib.metadata.in  i-cal-object.c.in  i-cal-object.h.in  i-cal-time-format.c  i-cal-time-format.h  libical-glib.pc.in
vzic/: CMakeLists-integrated.txt  CMakeLists.txt  Makefile  README  README.md  test-vzic.c  vzic-dump.c  vzic-dump.h  vzic-dump.pl  vzic-merge.pl  vzic-output.c  vzic-output.h  vzic-parse.c  vzic-parse.h  vzic-test.pl  vzic.c  vzic.h
zoneinfo/: CET.ics  CMakeLists.txt  CST6CDT.ics  Cuba.ics  EET.ics  EST.ics  EST5EDT.ics  Egypt.ics  Eire.ics  GB-Eire.ics  GB.ics  GMT+0.ics  GMT-0.ics  GMT.ics  GMT0.ics  Greenwich.ics  HST.ics  Hongkong.ics  Iceland.ics  Iran.ics  Israel.ics  Jamaica.ics  Japan.ics  Kwajalein.ics  Libya.ics  MET.ics  MST.ics  MST7MDT.ics  Makefile.in  NZ-CHAT.ics  NZ.ics  Navajo.ics  PRC.ics  PST8PDT.ics  Poland.ics  Portugal.ics  ROC.ics  ROK.ics  Singapore.ics  Turkey.ics  (+8 more)
(+6116 files in other folders)
